--- a/app/src/main/res/layout/reklama_item.xml
+++ b/app/src/main/res/layout/reklama_item.xml
@@ -22,6 +22,13 @@
             android:layout_height="match_parent"
             android:background="#FF9800">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="gshd fgklhsdflk"
+                android:textSize="30dp"
+                android:textColor="@color/white"/>
+
 
 
         </FrameLayout>
