--- a/app/src/main/res/layout/adapter_food.xml
+++ b/app/src/main/res/layout/adapter_food.xml
@@ -18,9 +18,17 @@
             android:layout_height="wrap_content"
             android:textColor="#3D405B"
             android:text="name"
+            android:fontFamily="@font/unbiundeedregular"
             android:layout_marginTop="10dp"
             android:layout_gravity="center_horizontal"
             />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom"
+            android:layout_marginStart="10dp"
+            android:src="@mipmap/ic_launcher"/>
 
     </androidx.cardview.widget.CardView>
 
