--- a/app/src/main/res/layout/adapter_food.xml
+++ b/app/src/main/res/layout/adapter_food.xml
@@ -2,8 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="110dp"
+    android:layout_height="140dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
@@ -14,6 +14,7 @@
         app:cardBackgroundColor="#FFEF92">
 
         <TextView
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#3D405B"
