--- a/app/src/main/res/layout/adapter_food.xml
+++ b/app/src/main/res/layout/adapter_food.xml
@@ -25,6 +25,7 @@
             />
 
         <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/image"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_gravity="bottom"
