--- a/app/src/main/res/layout/reklama_item.xml
+++ b/app/src/main/res/layout/reklama_item.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -28,6 +28,12 @@
                 android:text="gshd fgklhsdflk"
                 android:textSize="30dp"
                 android:textColor="@color/white"/>
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/donut"
+                android:layout_gravity="end"/>
 
 
 
