--- a/app/src/main/res/layout/reklama_item.xml
+++ b/app/src/main/res/layout/reklama_item.xml
@@ -23,6 +23,7 @@
             android:background="#FF9800">
 
             <TextView
+                android:id="@+id/reklamaName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="gshd fgklhsdflk"
@@ -30,6 +31,7 @@
                 android:textColor="@color/white"/>
 
             <ImageView
+                android:id="@+id/reklamaImg"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@drawable/donut"
