--- a/app/src/main/res/layout/adapter_food.xml
+++ b/app/src/main/res/layout/adapter_food.xml
@@ -7,6 +7,8 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="110dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_height="140dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
