--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="bg_1">#AD7BE9</color>
-    <color name="bg_2">#BFACE2</color>
-    <color name="bg_3">#DF7857</color>
-    <color name="bg_4">#5F8D4E</color>
-    <color name="bg_5">#439A97</color>
+
+    <color name="bg_1">#F28482</color>
 
 </resources>
